feat: add classification document migration
